// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Block default 1`] = `
<section
  className="sc-bdVaJa jfLXUy"
/>
`;

exports[`Storyshots Block with props 1`] = `
<section
  className="sc-bdVaJa jVKEVv"
  display="block"
  height="300px"
  opacity=""
  order=""
  overflow="visible"
  size=""
  width="300px"
>
  <p
    className="sc-bwzfXH caMcFG"
    color="black"
  >
    Text
  </p>
</section>
`;

exports[`Storyshots Box default 1`] = `
<div
  className="sc-htpNat dwuLZg"
  height="200px"
  width="300px"
/>
`;

exports[`Storyshots Box with props 1`] = `
<div
  className="sc-htpNat cYYdmx"
  display="block"
  height="100vh"
  opacity=""
  order=""
  overflow="visible"
  size="300px"
  width="100%"
>
  <p
    className="sc-bwzfXH caMcFG"
    color="black"
  >
    Text
  </p>
</div>
`;

exports[`Storyshots Button active 1`] = `
<button
  className="active sc-bxivhb bkBLdT"
  onClick={[Function]}
>
  Active
</button>
`;

exports[`Storyshots Button default 1`] = `
<button
  className="sc-bxivhb bKiFQF"
  onClick={[Function]}
>
  Default
</button>
`;

exports[`Storyshots Button hover & active 1`] = `
<button
  className="active sc-bxivhb fdlXDQ"
  onClick={[Function]}
>
  Active
</button>
`;

exports[`Storyshots Button hover 1`] = `
<button
  className="active sc-bxivhb jQuNGk"
  onClick={[Function]}
>
  Active
</button>
`;

exports[`Storyshots Button outline 1`] = `
<button
  className="sc-bxivhb bhFibJ"
  onClick={[Function]}
>
  Outline
</button>
`;

exports[`Storyshots Button with props 1`] = `
<section
  className="sc-bdVaJa bBZzzW"
  display="flex"
>
  <button
    className="sc-bxivhb gcmetu"
    display="block"
    height=""
    onClick={[Function]}
    opacity=""
    order=""
    overflow="visible"
    size=""
    width=""
  >
    With Props
  </button>
</section>
`;

exports[`Storyshots Card default 1`] = `
<div
  className="sc-ifAKCX gJHtEF"
/>
`;

exports[`Storyshots Card with content horizontal 1`] = `
<div
  className="sc-ifAKCX hlsfWv"
>
  <div
    className="sc-EHOje dgSiwi"
    width="100%"
  />
  <div
    className="sc-EHOje hYuijH"
  >
    <p
      className="sc-bwzfXH kOvGIu"
    >
      The Moon
    </p>
    <p
      className="sc-bwzfXH fOvtoS"
    >
      The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
    </p>
    <button
      className="sc-bxivhb bKiFQF"
      onClick={[Function]}
    >
      Read more
    </button>
  </div>
</div>
`;

exports[`Storyshots Card with content vertical 1`] = `
<div
  className="sc-ifAKCX jjkobi"
>
  <div
    className="sc-EHOje ivbtGQ"
    width="100%"
  />
  <div
    className="sc-EHOje dpDIZF"
  >
    <p
      className="sc-bwzfXH kOvGIu"
    >
      The Moon
    </p>
    <p
      className="sc-bwzfXH fOvtoS"
    >
      The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
    </p>
    <button
      className="sc-bxivhb bKiFQF"
      onClick={[Function]}
    >
      Read more
    </button>
  </div>
</div>
`;

exports[`Storyshots Card with props 1`] = `
<div
  className="sc-ifAKCX etTIAT"
  display="block"
  height=""
  opacity=""
  order=""
  overflow="auto"
  size=""
  width=""
>
  <div
    className="sc-EHOje ivbtGQ"
    width="100%"
  />
  <div
    className="sc-EHOje dpDIZF"
  >
    <p
      className="sc-bwzfXH kOvGIu"
    >
      The Moon
    </p>
    <p
      className="sc-bwzfXH fOvtoS"
    >
      The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
    </p>
    <button
      className="sc-bxivhb bKiFQF"
      onClick={[Function]}
    >
      Read more
    </button>
  </div>
</div>
`;

exports[`Storyshots Carousel default 1`] = `
<div
  className="slick-slider sc-bZQynM cazFfH slick-initialized"
  dir="ltr"
>
  <div
    className="slick-list"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={null}
    onMouseMove={null}
    onMouseUp={[Function]}
    onTouchCancel={null}
    onTouchEnd={[Function]}
    onTouchMove={null}
    onTouchStart={[Function]}
    style={Object {}}
  >
    <div
      className="slick-track"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "WebkitTransform": "translate3d(0px, 0px, 0px)",
          "WebkitTransition": "",
          "msTransform": "translateX(0px)",
          "opacity": 1,
          "transform": "translate3d(0px, 0px, 0px)",
          "transition": "",
        }
      }
    >
      <div
        aria-hidden={true}
        className="slick-slide slick-cloned"
        data-index={-1}
        onClick={[Function]}
        style={
          Object {
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={false}
        className="slick-slide slick-active slick-current"
        data-index={0}
        onClick={[Function]}
        style={
          Object {
            "outline": "none",
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide"
        data-index={1}
        onClick={[Function]}
        style={
          Object {
            "outline": "none",
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide"
        data-index={2}
        onClick={[Function]}
        style={
          Object {
            "outline": "none",
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide slick-cloned"
        data-index={3}
        onClick={[Function]}
        style={
          Object {
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide slick-cloned"
        data-index={4}
        onClick={[Function]}
        style={
          Object {
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide slick-cloned"
        data-index={5}
        onClick={[Function]}
        style={
          Object {
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Carousel with props 1`] = `
<div
  className="slick-slider sc-bZQynM gmhXNJ slick-initialized"
  dir="ltr"
>
  <div
    className="slick-list"
    onClick={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={null}
    onMouseMove={null}
    onMouseUp={[Function]}
    onTouchCancel={null}
    onTouchEnd={[Function]}
    onTouchMove={null}
    onTouchStart={[Function]}
    style={Object {}}
  >
    <div
      className="slick-track"
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      style={
        Object {
          "WebkitTransform": "translate3d(0px, 0px, 0px)",
          "WebkitTransition": "",
          "msTransform": "translateX(0px)",
          "opacity": 1,
          "transform": "translate3d(0px, 0px, 0px)",
          "transition": "",
        }
      }
    >
      <div
        aria-hidden={true}
        className="slick-slide slick-cloned"
        data-index={-1}
        onClick={[Function]}
        style={
          Object {
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={false}
        className="slick-slide slick-active slick-current"
        data-index={0}
        onClick={[Function]}
        style={
          Object {
            "outline": "none",
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide"
        data-index={1}
        onClick={[Function]}
        style={
          Object {
            "outline": "none",
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide"
        data-index={2}
        onClick={[Function]}
        style={
          Object {
            "outline": "none",
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide slick-cloned"
        data-index={3}
        onClick={[Function]}
        style={
          Object {
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide slick-cloned"
        data-index={4}
        onClick={[Function]}
        style={
          Object {
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
      <div
        aria-hidden={true}
        className="slick-slide slick-cloned"
        data-index={5}
        onClick={[Function]}
        style={
          Object {
            "width": 0,
          }
        }
        tabIndex="-1"
      >
        <div>
          <img
            className="sc-gzVnrw eaFRsf"
            height="400px"
            src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
            style={
              Object {
                "display": "inline-block",
                "width": "100%",
              }
            }
            tabIndex={-1}
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex default 1`] = `
<div
  className="sc-EHOje hlyEaN"
/>
`;

exports[`Storyshots Flex with card 1`] = `
<div
  className="sc-ifAKCX jjkobi"
>
  <div
    className="sc-EHOje ivbtGQ"
    width="100%"
  />
  <div
    className="sc-EHOje dpDIZF"
  >
    <p
      className="sc-bwzfXH kOvGIu"
    >
      The Moon
    </p>
    <p
      className="sc-bwzfXH fOvtoS"
    >
      The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
    </p>
    <div
      className="sc-EHOje hlyEaN"
    >
      <button
        className="sc-bxivhb fRhXNK"
        onClick={[Function]}
      >
        First
      </button>
      <button
        className="sc-bxivhb fRhXNK"
        onClick={[Function]}
      >
        Second
      </button>
      <button
        className="sc-bxivhb bKiFQF"
        onClick={[Function]}
      >
        Third
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Flex with props 1`] = `
<div
  className="sc-EHOje cIELkj"
  display="flex"
  height="300px"
  opacity=""
  order=""
  overflow="visible"
  size=""
  width="300px"
>
  <p
    className="sc-bwzfXH caMcFG"
    color="black"
  >
    Text
  </p>
</div>
`;

exports[`Storyshots Grid default 1`] = `
<div
  className="sc-htoDjs hzdOJA"
/>
`;

exports[`Storyshots Grid with boxes 1`] = `
<div
  className="sc-htoDjs ElPGh"
>
  <div
    className="sc-htpNat cXiSzu"
  >
    <p
      className="sc-bwzfXH cJFWNS"
    >
      Although we will never watch two suns rise and fall from the perspective of our own planet, like Luke Skywalker on Tatooine in the iconic scene from Star Wars: A New Hope, theres a newly discovered planet where aliens might do so.
    </p>
  </div>
  <div
    className="sc-htpNat doUMgF"
  />
  <div
    className="sc-htpNat bxcYBK"
  />
  <div
    className="sc-htpNat bxcYBK"
  />
  <div
    className="sc-htoDjs djAivm"
  >
    <div
      className="sc-htpNat bxcYBK"
    />
    <div
      className="sc-htpNat bxcYBK"
    />
    <div
      className="sc-htpNat bxcYBK"
    />
    <div
      className="sc-htpNat bxcYBK"
    />
  </div>
  <div
    className="sc-htpNat bxcYBK"
  />
  <div
    className="sc-htpNat doUMgF"
  />
  <div
    className="sc-htpNat bxcYBK"
  />
  <div
    className="sc-htpNat bxcYBK"
  />
</div>
`;

exports[`Storyshots Grid with cards 1`] = `
<div
  className="sc-htoDjs gFwTNa"
>
  <div
    className="sc-ifAKCX jjkobi"
  >
    <div
      className="sc-htoDjs fJWSMm"
      width="100%"
    />
    <div
      className="sc-htoDjs bforIO"
    >
      <p
        className="sc-bwzfXH kOvGIu"
      >
        The Moon
      </p>
      <p
        className="sc-bwzfXH fOvtoS"
      >
        The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
      </p>
      <div
        className="sc-htoDjs hzdOJA"
      >
        <button
          className="sc-bxivhb jZqUoY"
          onClick={[Function]}
        >
          First
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-ifAKCX jjkobi"
  >
    <div
      className="sc-htoDjs fJWSMm"
      width="100%"
    />
    <div
      className="sc-htoDjs bforIO"
    >
      <p
        className="sc-bwzfXH kOvGIu"
      >
        The Moon
      </p>
      <p
        className="sc-bwzfXH fOvtoS"
      >
        The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
      </p>
      <div
        className="sc-htoDjs hzdOJA"
      >
        <button
          className="sc-bxivhb fyTDRn"
          onClick={[Function]}
        >
          First
        </button>
      </div>
    </div>
  </div>
  <div
    className="sc-ifAKCX jjkobi"
  >
    <div
      className="sc-htoDjs fJWSMm"
      width="100%"
    />
    <div
      className="sc-htoDjs bforIO"
    >
      <p
        className="sc-bwzfXH kOvGIu"
      >
        The Moon
      </p>
      <p
        className="sc-bwzfXH fOvtoS"
      >
        The Moon is an astronomical body that orbits planet Earth and is Earths only permanent natural satellite.
      </p>
      <div
        className="sc-htoDjs hzdOJA"
      >
        <button
          className="sc-bxivhb dFMZyr"
          onClick={[Function]}
        >
          First
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Grid with image 1`] = `
<div
  className="sc-htoDjs fdULtj"
>
  <img
    className="sc-gzVnrw iEenTd"
    src="https://www.jpl.nasa.gov/images/mars/20160421/PIA00407-16.jpg"
  />
  <img
    className="sc-gzVnrw iEenTd"
    src="https://photojournal.jpl.nasa.gov/jpeg/PIA18182.jpg"
  />
  <img
    className="sc-gzVnrw iEenTd"
    src="https://www.jpl.nasa.gov/images/cassini/20160408/PIA11141-16.jpg"
  />
  <img
    className="sc-gzVnrw iEenTd"
    src="https://cdn.mos.cms.futurecdn.net/DfcnU8Z2yeyrYLmsRCKtDH.jpg"
  />
  <img
    className="sc-gzVnrw iEenTd"
    src="https://solarsystem.nasa.gov/system/downloadable_items/1193_pluto_natural_color_20150714_detail.jpg"
  />
  <img
    className="sc-gzVnrw iEenTd"
    src="https://solarsystem.nasa.gov/system/resources/detail_files/771_PIA16853.jpg"
  />
</div>
`;

exports[`Storyshots Grid with props 1`] = `
<div
  className="sc-htoDjs kGqEox"
  display="flex"
  height="300px"
  opacity=""
  order=""
  overflow="visible"
  size=""
  width="300px"
>
  <p
    className="sc-bwzfXH caMcFG"
    color="black"
  >
    Text
  </p>
</div>
`;

exports[`Storyshots Hr default 1`] = `
Array [
  "Content",
  <div
    className="sc-dnqmqq DkZsq"
  />,
  "Content",
]
`;

exports[`Storyshots Hr variants 1`] = `
Array [
  "Big",
  <div
    className="sc-dnqmqq FkElV"
  />,
  "Small",
  <div
    className="sc-dnqmqq ckFhtD"
  />,
  "Content",
]
`;

exports[`Storyshots Hr with props 1`] = `
Array [
  "Content",
  <div
    className="sc-dnqmqq bNpbRz"
    display="block"
    height="1px"
    opacity=""
    order=""
    width="100px"
  />,
  "Content",
]
`;

exports[`Storyshots Image adaptive 1`] = `
<img
  className="sc-gzVnrw ONLTZ"
  height="400px"
  src="https://picsum.photos/500"
  width="500px"
/>
`;

exports[`Storyshots Image fluid 1`] = `
<img
  className="sc-gzVnrw dnQfVK"
  src="https://picsum.photos/1800"
/>
`;

exports[`Storyshots Image thumb 1`] = `
<img
  className="sc-gzVnrw xBcVE"
  src="https://picsum.photos/500"
/>
`;

exports[`Storyshots Image with props 1`] = `
<img
  className="sc-gzVnrw cQVxuj"
  display="block"
  height="500px"
  opacity=""
  order=""
  src="https://picsum.photos/500"
  width="400px"
/>
`;

exports[`Storyshots Input basic 1`] = `
<section
  className="sc-bdVaJa kIzjwD"
  display="flex"
>
  <input
    className="sc-iwsKbI dVSgwU"
    onChange={[Function]}
  />
</section>
`;

exports[`Storyshots Input focus 1`] = `
<input
  className="sc-iwsKbI fmnnjJ"
  onChange={[Function]}
/>
`;

exports[`Storyshots Input white 1`] = `
<input
  className="sc-iwsKbI dVSgwU"
  onChange={[Function]}
/>
`;

exports[`Storyshots Link default 1`] = `
<a
  className="sc-gZMcBi eVLekc"
  href="https://quarkly.space/"
>
  Quarkly
</a>
`;

exports[`Storyshots Link hover 1`] = `
<a
  className="sc-gZMcBi iFRbuX"
  color="#007bff"
  href="https://quarkly.space/"
>
  <p
    className="sc-bwzfXH kSKDOa"
    color="#007bff"
  >
    Quarkly
  </p>
</a>
`;

exports[`Storyshots Link with props 1`] = `
<a
  className="sc-gZMcBi hfEvaR"
  color="#007bff"
  fontFamily=""
  fontSize=""
  fontStyle="normal"
  fontWeight="normal"
  href="https://quarkly.space/"
  letterSpacing=""
  name=""
  opacity=""
  order=""
  overflow="visible"
  target="_self"
  title=""
>
  Some text...
</a>
`;

exports[`Storyshots Link with text 1`] = `
<a
  className="sc-gZMcBi deuFXF"
  color="#007bff"
  href="https://quarkly.space/"
>
  <p
    className="sc-bwzfXH kHGyoZ"
    color="#007bff"
  >
    Quarkly
  </p>
</a>
`;

exports[`Storyshots List default 1`] = `
<ul
  className="sc-gqjmRU kfCriG"
>
  <li>
    <p
      className="sc-bwzfXH ehXotu"
    >
      Item 1
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH ehXotu"
    >
      Item 2
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH ehXotu"
    >
      Item 3
    </p>
  </li>
</ul>
`;

exports[`Storyshots List horizontal 1`] = `
<ul
  className="sc-gqjmRU cgxabN"
>
  <li>
    <p
      className="sc-bwzfXH ehXotu"
    >
      Item 1
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH ehXotu"
    >
      Item 2
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH ehXotu"
    >
      Item 3
    </p>
  </li>
</ul>
`;

exports[`Storyshots List with props 1`] = `
<ul
  className="sc-gqjmRU dKEWac"
  display="block"
  height="300px"
  opacity=""
  order=""
  overflow="visible"
  size=""
  width="300px"
>
  <li>
    <p
      className="sc-bwzfXH ehXotu"
    >
      Item 1
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH ehXotu"
    >
      Item 2
    </p>
  </li>
  <li>
    <p
      className="sc-bwzfXH ehXotu"
    >
      Item 3
    </p>
  </li>
</ul>
`;

exports[`Storyshots Select basic 1`] = `
<section
  className="sc-bdVaJa kIzjwD"
  display="flex"
>
  <select
    className="sc-VigVT cmdjLx"
  >
    <option
      className="sc-jTzLTM jGxTRr"
      value="hello"
    >
      hello
    </option>
    <option
      className="sc-jTzLTM jGxTRr"
      value="world"
    >
      world
    </option>
  </select>
</section>
`;

exports[`Storyshots Select black 1`] = `
<select
  className="sc-VigVT jRlawh"
>
  <option
    className="sc-jTzLTM jGxTRr"
    value="hello"
  >
    hello
  </option>
  <option
    className="sc-jTzLTM jGxTRr"
    value="world"
  >
    world
  </option>
</select>
`;

exports[`Storyshots Spacer 10rem 1`] = `
Array [
  "Content",
  <div
    className="sc-fjdhpX hpVcgD"
    height="10rem"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer 25% 1`] = `
Array [
  "Content",
  <div
    className="sc-fjdhpX enmdJE"
    height="25%"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer 50vh 1`] = `
Array [
  "Content",
  <div
    className="sc-fjdhpX fSuqFE"
    height="50vh"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer 100px 1`] = `
Array [
  "Content",
  <div
    className="sc-fjdhpX fDBKha"
    height="100px"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer adaptive 1`] = `
Array [
  "Content",
  <div
    className="sc-fjdhpX broPBK"
    height={
      Array [
        "100px",
        "200px",
        "400px",
      ]
    }
  />,
  "Content",
]
`;

exports[`Storyshots Spacer default 1`] = `
Array [
  "Content",
  <div
    className="sc-fjdhpX jZVawo"
  />,
  "Content",
]
`;

exports[`Storyshots Spacer variants 1`] = `
Array [
  "Big",
  <div
    className="sc-fjdhpX hKthgk"
  />,
  "Small",
  <div
    className="sc-fjdhpX dezXkN"
  />,
  "Content",
]
`;

exports[`Storyshots Tabs constructor 1`] = `
<section
  className="sc-bdVaJa kdxHJG"
>
  <div
    className="sc-cSHVUG kPrLGY"
  >
    <div
      className="sc-htpNat dYvtaT"
      role="tabnav"
    >
      <button
        className="active sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Основное
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Лэйаут
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Отступы
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Flex
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Grid
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Фон
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Разное
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Позиция
      </button>
    </div>
    <div
      className="sc-htpNat khVXnu"
      role="tabs"
    >
      <div
        className="sc-jzJRlG ioCwbZ"
      >
        <div
          className="sc-htpNat fcjVhU"
          display="flex"
        >
          <p
            className="sc-bwzfXH cDwzMq"
            color="white"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </div>
      <div
        className="sc-jzJRlG dbOHBu"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH bxDdnw"
            color="white"
          >
            Содержимое категории Лэйаут
          </p>
        </div>
      </div>
      <div
        className="sc-jzJRlG dbOHBu"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH bxDdnw"
            color="white"
          >
            Содержимое категории Отступы
          </p>
        </div>
      </div>
      <div
        className="sc-jzJRlG dbOHBu"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH bxDdnw"
            color="white"
          >
            Содержимое категории Flex
          </p>
        </div>
      </div>
      <div
        className="sc-jzJRlG dbOHBu"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH bxDdnw"
            color="white"
          >
            Содержимое категории Grid
          </p>
        </div>
      </div>
      <div
        className="sc-jzJRlG dbOHBu"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH bxDdnw"
            color="white"
          >
            Содержимое категории Фон
          </p>
        </div>
      </div>
      <div
        className="sc-jzJRlG dbOHBu"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH bxDdnw"
            color="white"
          >
            Содержимое категории Разное
          </p>
        </div>
      </div>
      <div
        className="sc-jzJRlG dbOHBu"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH bxDdnw"
            color="white"
          >
            Содержимое категории Позиция
          </p>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Tabs constructor lazy 1`] = `
<section
  className="sc-bdVaJa kdxHJG"
>
  <div
    className="sc-cSHVUG kPrLGY"
  >
    <div
      className="sc-htpNat dYvtaT"
      role="tabnav"
    >
      <button
        className="active sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Основное
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Лэйаут
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Отступы
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Flex
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Grid
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Фон
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Разное
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Позиция
      </button>
    </div>
    <div
      className="sc-htpNat khVXnu"
      role="tabs"
    >
      <div
        className="sc-jzJRlG ioCwbZ"
      >
        <div
          className="sc-htpNat fcjVhU"
          display="flex"
        >
          <p
            className="sc-bwzfXH cDwzMq"
            color="white"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </div>
      <div
        className="sc-jzJRlG dbOHBu"
      />
      <div
        className="sc-jzJRlG dbOHBu"
      />
      <div
        className="sc-jzJRlG dbOHBu"
      />
      <div
        className="sc-jzJRlG dbOHBu"
      />
      <div
        className="sc-jzJRlG dbOHBu"
      />
      <div
        className="sc-jzJRlG dbOHBu"
      />
      <div
        className="sc-jzJRlG dbOHBu"
      />
    </div>
  </div>
</section>
`;

exports[`Storyshots Tabs tabidex reset 1`] = `
<section
  className="sc-bdVaJa kdxHJG"
>
  <div
    className="sc-cSHVUG kPrLGY"
  >
    <div
      className="sc-htpNat dYvtaT"
      role="tabnav"
    >
      <button
        className="active sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Лэйаут 
        0
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Лэйаут 
        1
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Лэйаут 
        2
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Лэйаут 
        3
      </button>
      <button
        className="sc-bxivhb jWZeyE"
        onClick={[Function]}
      >
        Лэйаут 
        4
      </button>
    </div>
    <div
      className="sc-htpNat khVXnu"
      role="tabs"
    >
      <div
        className="sc-jzJRlG ioCwbZ"
      >
        <div
          className="sc-htpNat fcjVhU"
          display="flex"
        >
          <p
            className="sc-bwzfXH cDwzMq"
            color="white"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
          </p>
        </div>
      </div>
      <div
        className="sc-jzJRlG dbOHBu"
      >
        <div
          className="sc-htpNat gexiXs"
          display="flex"
        >
          <p
            className="sc-bwzfXH bxDdnw"
            color="white"
          >
            Содержимое категории Лэйаут
          </p>
        </div>
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Text adaptive 1`] = `
<p
  className="sc-bwzfXH jVFDmL"
  color={
    Array [
      "black",
      "gray",
      "lightgrey",
    ]
  }
  fontSize={
    Array [
      "36px",
      "54px",
      "72px",
    ]
  }
>
  Display1
</p>
`;

exports[`Storyshots Text default 1`] = `
<p
  className="sc-bwzfXH fOvtoS"
>
  Base text
</p>
`;

exports[`Storyshots Text variants 1`] = `
Array [
  <p
    className="sc-bwzfXH eKTWLy"
  >
    Display1
  </p>,
  <p
    className="sc-bwzfXH cfxHhN"
  >
    Display2
  </p>,
  <p
    className="sc-bwzfXH lkMRUb"
  >
    Display3
  </p>,
  <p
    className="sc-bwzfXH grOIhZ"
  >
    Display4
  </p>,
  <p
    className="sc-bwzfXH deLvZU"
  >
    Heading1
  </p>,
  <p
    className="sc-bwzfXH cJFWNS"
  >
    Heading2
  </p>,
  <p
    className="sc-bwzfXH iPluDJ"
  >
    Heading3
  </p>,
  <p
    className="sc-bwzfXH eVbWut"
  >
    Heading4
  </p>,
  <p
    className="sc-bwzfXH bVIBfr"
  >
    Heading5
  </p>,
  <p
    className="sc-bwzfXH ffpVlG"
  >
    Heading6
  </p>,
  <p
    className="sc-bwzfXH eMwRcN"
  >
    Lead paragraph
  </p>,
  <p
    className="sc-bwzfXH fOvtoS"
  >
    Base text
  </p>,
]
`;

exports[`Storyshots Text with props 1`] = `
<p
  className="sc-bwzfXH jSkcNO"
  color="black"
  fontFamily=""
  fontSize=""
  fontStyle="normal"
  fontWeight="normal"
  letterSpacing=""
  opacity=""
  order=""
  overflow="visible"
>
  Some text...
</p>
`;

exports[`Storyshots Theme with di 1`] = `
Array [
  <button
    className="sc-bxivhb fdMKYt"
    onClick={[Function]}
  >
    default
  </button>,
  <button
    className="sc-bxivhb fdMKYt"
    onClick={[Function]}
  >
    primary
  </button>,
]
`;

exports[`Storyshots Tooltip default 1`] = `
<div>
  <button
    className="sc-bxivhb bKiFQF"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Tooltip empty 1`] = `
<div>
  
</div>
`;

exports[`Storyshots Tooltip hidden 1`] = `
<div>
  <button
    className="sc-bxivhb kjyZZG"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Tooltip top 1`] = `
<div>
  <button
    className="sc-bxivhb kjyZZG"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    Click me
  </button>
</div>
`;

exports[`Storyshots Video default 1`] = `
<iframe
  allow="autoplay; fullscreen"
  allowFullScreen={true}
  className="sc-kgoBCf hIGCsf"
  frameBorder="0"
  src="https://www.youtube.com/embed/JNFX32Hz_N0?rel=0&mute=0&autoplay=0&controls=0&loop=0&title=0&byline=0"
  title="video"
/>
`;

exports[`Storyshots Video with props 1`] = `
<iframe
  allow="autoplay; fullscreen"
  allowFullScreen={true}
  className="sc-kgoBCf eTszPN"
  frameBorder="0"
  src="https://www.youtube.com/embed/c6t3bW7kx6E?rel=0&mute=0&autoplay=0&controls=1&loop=0&showinfo=1"
  title="video"
/>
`;
